# swagger-ui-dist-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: daily_version_check.yml
examples/: actix.rs  file.rs  inline.rs
src/: lib.rs
tests/: axum-server.rs
